--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
+
 {
   "name": "sickdyd",
-  "homepage": "https://sugoi.online/sickdyd",
+  "homepage": "https://sugoi.online/sickdyd_test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
     "dompurify": "^2.0.7",
     "react": "^16.10.2",
+    "react-app-polyfill": "^1.0.4",
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.10.2",
     "react-draggable": "^4.0.3",
