Removed api url and change resume link

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "sickdyd",
-  "homepage": "https://sugoi.online/sickdyd_test",
+  "homepage": "https://sugoi.online/sickdyd",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
