--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
-
 {
   "name": "sickdyd",
-  "homepage": "https://sugoi.online/sickdyd",
+  "homepage": "http://sickdyd.github.io/sickdyd/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
     "dompurify": "^2.0.7",
+    "gh-pages": "^2.2.0",
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.4",
     "react-device-detect": "^1.9.10",
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
