--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "dompurify": "^2.0.7",
+    "axios": "^0.19.2",
+    "dompurify": "^2.0.8",
     "gh-pages": "^2.2.0",
-    "react": "^16.10.2",
-    "react-app-polyfill": "^1.0.4",
-    "react-device-detect": "^1.9.10",
-    "react-dom": "^16.10.2",
-    "react-draggable": "^4.0.3",
-    "react-scripts": "3.2.0",
+    "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
+    "react-device-detect": "^1.11.14",
+    "react-dom": "^16.13.1",
+    "react-draggable": "^4.2.0",
+    "react-scripts": "^3.4.1",
     "uuidv4": "^5.0.1"
   },
   "scripts": {
